# theGame

./: .env.example  .gitignore  Dockerfile  README.md  README_LOGGIN_PROMPT.md  README_postgres_setup.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
db/migrations/: 001_init.sql
mcp/: 01_overview.md  02_notion_readonly.md  03_filesystem_readonly.md  04_smoketests.md  05_troubleshooting.md  README.md
scripts/: migrate.sh  seed.sh
theGameCodeBase/cultural_loader/: .env.example  .fetch_data.py.swp  api_list.py  db_init.py  fetch_data.py  logging_config.py  paginate.py  requirements.txt  test_fetch_data.py  transform.py
theGameCodeBase/cultural_loader/Agent_prompts/: Database_scheme_agent.md
