[tool.poetry]
name = "thegame-backend"
version = "0.1.0"
description = "BFF API for theGame"
authors = ["Tom <tom.ignoul@student.ehb.be>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
psycopg = {extras = ["binary"], version = "^3.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

